[gd_scene load_steps=5 format=2]

[ext_resource path="res://MAIN/Menu.gd" type="Script" id=1]
[ext_resource path="res://MAIN/CashPanel.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.121569, 0.584314, 0.713726 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0627451, 0, 0.360784, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.764706, 0, 0, 1 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startgame" type="Button" parent="."]
margin_left = 182.507
margin_top = 133.0
margin_right = 676.507
margin_bottom = 264.0
custom_styles/normal = SubResource( 1 )
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 183.0
margin_top = 510.0
margin_right = 677.0
margin_bottom = 636.0
custom_styles/normal = SubResource( 1 )
text = "QUIT"

[node name="shop" type="Button" parent="."]
margin_left = 183.0
margin_top = 318.0
margin_right = 677.0
margin_bottom = 447.0
custom_styles/normal = SubResource( 2 )
text = "SHOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashPanel" parent="." instance=ExtResource( 2 )]
margin_left = 2.0
margin_right = 1282.0
margin_bottom = 53.0
[connection signal="pressed" from="startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="shop" to="." method="_on_shop_pressed"]
